--- a/deepseek-r1-assistant/package.json
+++ b/deepseek-r1-assistant/package.json
@@ -9,13 +9,12 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
-  "main": "./out/extension.js",
+  "main": "./out/extension.ts",
   "contributes": {
     "commands": [
       {
         "command": "deepseek-r1-assistant.helloWorld",
-        "title": "Hello World"
+        "title": "Start chatting with Deepseek"
       }
     ]
   },
